// catalog-service/proto/catalog/catalog.proto

syntax = "proto3";

package catalog;

option go_package = "proto/catalog";

service CatalogService{
	rpc CreateProduct(Product) returns (CreateProductResponse){}

	rpc GetProducts(GetProductsRequest) returns (GetProductsResponse){}
}

message Product{
	string id = 1;
	string title = 2;
	string description = 3;
	int32 price = 4;
	repeated Photo photos = 5;
	Category category = 6;
	Size size = 7;
	Color color1 = 8;
	Color color2 = 9;
	Brand brand = 10;
	Condition condition = 11;
	string owner_id = 12;
	int32 wishlist_count = 13;
	Country country = 14;
	City city = 15;
	string created_at = 16;
	string updated_at = 17;
	int32 view_count = 18;
}

message Category{
	string id = 1;
	string name = 2;
	Category parent_category = 3;
	repeated Size sizes = 4;
}

message Size{
	string id = 1;
	string name = 2;
}

message Photo{
	string id = 1;
	string url = 2;
	bool is_main = 3;
	int32 height = 4;
	int32 width = 5;
	repeated Thumbnail thumbnails = 6;
}

message Thumbnail{
	string id = 1;
	string url = 2;
	int32 height = 3;
	int32 width = 4;
}

message Color{
	string id = 1;
	string name = 2;
	string hex_code = 3;
	string image = 4;
}

message Brand{
	string id = 1;
	string name = 2;
}

message Condition{
	string id = 1;
	string name = 2;
}

message Country{
	string id = 1;
	string name = 2;
}

message City{
	string id = 1;
	string name = 2;
}

message CreateProductResponse{
	bool created = 1;
	Product product = 2;
}

message GetProductsRequest{
	repeated Filter filters = 1;
}

message Filter{
	string key = 1;
	string value = 2;
}

message GetProductsResponse{
	repeated Product products = 1;
}